2007-11-04  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* gnome-sudoku/src/lib/gsudoku.py Fix decimal value in float error.
	
	* gnome-sudoku/src/lib/sudoku_maker.py Allow for empty lines in
	sudoku files.

2007-10-29  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* gnome-sudoku/src/lib/sudoku_maker.py: Keep generated puzzles in
	plain text files, with one file per difficulty level, rather than
	in one giant pickle. Remove "names" (what did the names mean
	anyway?).

	Organize module into two sections -- "methods for
	accessing puzzles we've created" and "methods for creating new
	puzzles". The methods for accessing have changed substantially
	(and changed names), resulting in changes throughout
	gnome-sudoku. The methods for generating puzzles have changed only
	slightly, with writes to files replacing holding things in memory,
	but the method names etc. staying the same.

	Remove SudokuTracker from this module to the module saver,
	reflecting it's new role (saving games rather than holding all
	games ever played in memory).

	* gnome-sudoku/src/lib/gnome_sudoku.py:

	inactivate_new_game_etc - decorator now returns whatever the
	wrapped function returns.

	disable "Save", "Open", "ByHand", "HighScore" menu items.

	Remove "Clear" and "Clear Notes" from toolbar.

	Add gconf key auto_save_interval (default to 60) -- interval
	between autosaves in seconds.

	UI.__init__ - reorganize into various setup_* functions for
	greater clarity. New methods are: setup_gui, setup_main_window,
	setup_actions, setup_undo, setup_color, setup_autosave,
	setup_main_boxes, setup_by_hand_area, setup_toggles

	UI.start_worker_thread - make use of new sudoku_maker convenience
	method n_puzzles to count puzzles.

	UI.you_win_callback - disable high scores and display simple dialog.

	UI.new_cb - use new "select game" interface (for opening game or
	new game).

	UI.quit_cb - save unfinished puzzle on quit

	UI.save_game - use new saver.sudoku_tracker saving
