@@ -1,3 +1,7 @@
+2007-11-08  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* gnome-sudoku/src/lib/gsudoku.py: Fix calculation of big/small borders.
+
 2007-11-04  Thomas M. Hinkle  <thinkle@cvs.gnome.org>
 
 	* gnome-sudoku/src/lib/gsudoku.py Fix decimal value in float error.
